--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -122,6 +122,7 @@
     <Content Include="Content\Css\bootstrap.css" />
     <Content Include="Content\Css\bootstrap.min.css" />
     <Content Include="Content\Css\Datepicker.js" />
+    <Content Include="Content\Img\imagenPerfil-Nula.png" />
     <Content Include="Content\Img\negritten.jpg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\esm\popper-utils.js" />
@@ -251,9 +252,15 @@
     <Compile Include="Models\NecesidadesDonacionesMonetarias.cs" />
     <Compile Include="Models\NecesidadesReferencias.cs" />
     <Compile Include="Models\NecesidadesValoraciones.cs" />
+    <Compile Include="Models\Views\VMLogin.cs" />
+    <Compile Include="Models\Views\VMPerfil.cs" />
+    <Compile Include="Models\Views\VMRegistro.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Context\TpDBContext.cs" />
     <Compile Include="Models\Usuarios.cs" />
+    <Compile Include="Services\ServicioDenuncia.cs" />
+    <Compile Include="Services\ServicioNecesidad.cs" />
+    <Compile Include="Services\ServicioUsuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -284,6 +291,8 @@
     <Content Include="Views\Home\Login.cshtml" />
     <Content Include="Views\Home\IndexLogueado.cshtml" />
     <Content Include="Views\Shared\VPFooter.cshtml" />
+    <Content Include="Views\Home\Perfil.cshtml" />
+    <Content Include="Views\Home\Denuncia.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -294,7 +303,6 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Content\Js\" />
-    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\index.d.ts" />
