--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -125,6 +125,7 @@
     <Content Include="Content\Img\bolsaDinero.png" />
     <Content Include="Content\Img\Completo.png" />
     <Content Include="Content\Img\dinero.png" />
+    <Content Include="Content\Img\error.png" />
     <Content Include="Content\Img\imagenPerfil-Nula.png" />
     <Content Include="Content\Img\itemProducto.png" />
     <Content Include="Content\Img\necesitamosInsumos.jpg" />
@@ -246,6 +247,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DenunciaController.cs" />
     <Compile Include="Controllers\DonacionMonetariaController.cs" />
+    <Compile Include="Controllers\ErrorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NecesidadController.cs" />
     <Compile Include="Controllers\NecesidadDonacionInsumosController.cs" />
@@ -314,6 +316,8 @@
     <Content Include="Views\NecesidadesDonacionesMonetarias\NecesidadesDonacionesMonetarias.cshtml" />
     <Content Include="Views\DonacionMonetaria\GraciasPorDonarMonetariamente.cshtml" />
     <Content Include="Views\DonacionMonetaria\SeleccionComprobanteDePago.cshtml" />
+    <Content Include="Views\Home\Administrador.cshtml" />
+    <Content Include="Views\Error\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
