--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -301,6 +301,8 @@
     <Content Include="Views\Home\Administrador.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Necesidades\Crear.cshtml" />
+    <Content Include="Views\Necesidades\Insumos.cshtml" />
+    <Content Include="Views\Necesidades\Monetaria.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
