--- a/Servicios/Servicios.csproj
+++ b/Servicios/Servicios.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicioDenuncia.cs" />
     <Compile Include="ServicioDonacion.cs" />
+    <Compile Include="ServicioDonacionInsumo.cs" />
     <Compile Include="ServicioNecesidad.cs" />
     <Compile Include="ServicioUsuario.cs" />
   </ItemGroup>
