Agrego logica en Login y Registro - Vista para recibir activacion Creada - Enviar email falta terminar

--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -53,8 +53,10 @@
     <Compile Include="NecesidadesReferencias.cs" />
     <Compile Include="NecesidadesValoraciones.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TipoEmail.cs" />
     <Compile Include="Usuarios.cs" />
     <Compile Include="Views\CheckValidDate.cs" />
+    <Compile Include="Views\VMDatosDeVerificacionDeUsuario.cs" />
     <Compile Include="Views\VMDonacionMonetaria.cs" />
     <Compile Include="Views\VMLogin.cs" />
     <Compile Include="Views\VMNecesidad.cs" />
