--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ Entidades/obj/Debug/Entidades.csproj.FileListAbsolute.txt
 *.dll
 Servicios/obj/Debug/Servicios.csproj.FileListAbsolute.txt
 Servicios/obj/Debug/Servicios.csproj.CopyComplete
+.vs/TPWeb3_20201C/config/applicationhost.config
+WebCovid19/obj/Debug/WebCovid19.csprojAssemblyReference.cache
