Actualizacion del proyecto
Agregado DAO y comentarios en base a la revision del profe

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Servicios/obj/Debug/Servicios.csproj.FileListAbsolute.txt
 Servicios/obj/Debug/Servicios.csproj.CopyComplete
 .vs/TPWeb3_20201C/config/applicationhost.config
 WebCovid19/obj/Debug/WebCovid19.csprojAssemblyReference.cache
+.vs/TPWeb3_20201C/config/applicationhost.config
