Cambio gigante. Leer descr.
Modifique los namespaces para que coincidan con la nueva estructura del proyecto. Saque varios comentarios y avancé con la creación de necesidades. Ya crea la necesidad y la persiste en la bd. Agregué Utilities, el cual se utiliza para el upload de imagenes.

--- a/Servicios/Servicios.csproj
+++ b/Servicios/Servicios.csproj
@@ -58,6 +58,7 @@
     <Compile Include="ServicioDonacion.cs" />
     <Compile Include="ServicioDonacionInsumo.cs" />
     <Compile Include="ServicioNecesidad.cs" />
+    <Compile Include="ServicioNecesidadesInsumos.cs" />
     <Compile Include="ServicioUsuario.cs" />
   </ItemGroup>
   <ItemGroup>
