--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Context\TpDBContext.cs" />
     <Compile Include="DonacionMonetariaDao.cs" />
     <Compile Include="NecesidadesDAO.cs" />
+    <Compile Include="NecesidadesDonacionesInsumosDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
