--- a/WebCovid19/Web.config
+++ b/WebCovid19/Web.config
@@ -13,12 +13,15 @@
             name por defecto pone uno muy largo, asi que es mejor ponerle uno mas corto con key adelante-->
     <!--Si queremos agregar mas bases de datos, puedo hacerlo desde aca, agregando otro 
       <add> entre connectionStrings  -->
-  <add name="TpDBContext" connectionString="data source=TRAINING-05\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+  <add name="TpDBContext" connectionString="data source=TRAINING-05\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <!-- Carpeta donde se van a guardar las imagenes: -->
+    <add key="CarpetaImagenes" value="/Imagenes"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
