--- a/DAO/DAO.csproj
+++ b/DAO/DAO.csproj
@@ -59,6 +59,7 @@
     <Compile Include="NecesidadesDAO.cs" />
     <Compile Include="NecesidadesDonacionesInsumosDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioDao.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
