--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EncriptarPassword.cs" />
     <Compile Include="TipoDonacion.cs" />
     <Compile Include="Denuncias.cs" />
     <Compile Include="DonacionesInsumos.cs" />
