Login Registro Mi Perfil Ok

--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -311,6 +311,7 @@
     <Content Include="Views\Usuario\IndexLogueado.cshtml" />
     <Content Include="Views\Usuario\Perfil.cshtml" />
     <Content Include="Views\Necesidades\Detalles.cshtml" />
+    <Content Include="Views\Usuario\ReenvioDeCodigo.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
