--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Views\VMLogin.cs" />
     <Compile Include="Views\VMNecesidad.cs" />
     <Compile Include="Views\VMPerfil.cs" />
+    <Compile Include="Views\VMReenvioDeEmail.cs" />
     <Compile Include="Views\VMRegistro.cs" />
   </ItemGroup>
   <ItemGroup>
