Agrego Generics y Valido por Fecha de Fin
Generics para implementar metodos - Agrego fecha de fin para mostrar Necesidades Activas / No Activas

--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -67,6 +67,7 @@
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="Usuarios.cs" />
     <Compile Include="Views\CheckValidDate.cs" />
+    <Compile Include="Views\ICRUD.cs" />
     <Compile Include="Views\VMDatosDeVerificacionDeUsuario.cs" />
     <Compile Include="Views\VMDonacionMonetaria.cs" />
     <Compile Include="Views\VMLogin.cs" />
