--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -52,6 +52,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EncriptarPassword.cs" />
+    <Compile Include="Metadata\Necesidades.cs" />
+    <Compile Include="Metadata\NecesidadesMetadata.cs" />
     <Compile Include="TipoDonacion.cs" />
     <Compile Include="Denuncias.cs" />
     <Compile Include="DonacionesInsumos.cs" />
@@ -68,7 +70,7 @@
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="Usuarios.cs" />
     <Compile Include="Views\CheckValidDate.cs" />
-    <Compile Include="Views\ICRUD.cs" />
+    <Compile Include="Interface\ICRUD.cs" />
     <Compile Include="Views\VMDatosDeVerificacionDeUsuario.cs" />
     <Compile Include="Views\VMDonacionMonetaria.cs" />
     <Compile Include="Views\VMLogin.cs" />
