--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DAO">
+      <HintPath>..\WebCovid19\Bin\DAO.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.4.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -69,7 +72,8 @@
     <Compile Include="TipoEstadoNecesidad.cs" />
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="Usuarios.cs" />
-    <Compile Include="Views\CheckValidDate.cs" />
+    <Compile Include="ValidationCustom\CheckValidDate.cs" />
+    <Compile Include="ValidationCustom\ValidarSiExisteEmail.cs" />
     <Compile Include="Interface\ICRUD.cs" />
     <Compile Include="Views\VMDatosDeVerificacionDeUsuario.cs" />
     <Compile Include="Views\VMDonacionMonetaria.cs" />
