--- a/WebCovid19/Web.config
+++ b/WebCovid19/Web.config
@@ -13,7 +13,12 @@
             name por defecto pone uno muy largo, asi que es mejor ponerle uno mas corto con key adelante-->
     <!--Si queremos agregar mas bases de datos, puedo hacerlo desde aca, agregando otro 
       <add> entre connectionStrings  -->
-  <add name="TpDBContext" connectionString="data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  <!--<add name="TpDBContext" connectionString="data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  -->
+	  
+	  <!--Connection de Diana: -->
+	  <add name="TpDBContext" connectionString="data source=DESKTOP-PV19QVA\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
