--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -54,7 +54,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EncriptarPassword.cs" />
     <Compile Include="Metadata\Necesidades.cs" />
     <Compile Include="Metadata\NecesidadesMetadata.cs" />
     <Compile Include="TipoDonacion.cs" />
@@ -75,6 +74,7 @@
     <Compile Include="ValidationCustom\CheckValidDate.cs" />
     <Compile Include="ValidationCustom\ValidarSiExisteEmail.cs" />
     <Compile Include="Interface\ICRUD.cs" />
+    <Compile Include="Views\EncriptarPassword.cs" />
     <Compile Include="Views\VMDatosDeVerificacionDeUsuario.cs" />
     <Compile Include="Views\VMDonacionMonetaria.cs" />
     <Compile Include="Views\VMLogin.cs" />
