ActionFilter para validar peticion
En caso de que se haya accedido a la página de ingresar a través de
otra página automáticamente, luego de hacer click en “Ingresar”, se deberá redirigir a la
página donde se deseaba ingresar, caso contrario se redirigirá a la página de inicio.

--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -258,6 +258,7 @@
     <Compile Include="Controllers\NecesidadesDonacionesMonetariasController.cs" />
     <Compile Include="Controllers\UsuarioController.cs" />
     <Compile Include="Filters\LoginFilter.cs" />
+    <Compile Include="Filters\ValidarPeticionFilter.cs" />
     <Compile Include="Migrations\C__MigrationHistory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
