--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -315,6 +315,7 @@
     <Content Include="Views\Usuario\ReenvioDeCodigo.cshtml" />
     <Content Include="Views\Necesidades\MisNecesidades.cshtml" />
     <Content Include="Views\Usuario\PublicacionDeLaNecesidad.cshtml" />
+    <Content Include="Views\Usuario\acerca-de.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
