Administrador y Boton Like or Dislike
Seccion del Administrador - En proceso
Like or Dislike - En proceso

--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -292,7 +292,7 @@
     <Content Include="Scripts\umd\bootstrap.min.js.map" />
     <Content Include="Views\Usuario\Login.cshtml" />
     <Content Include="Views\Shared\VPFooter.cshtml" />
-    <Content Include="Views\Denuncia\Denuncia.cshtml" />
+    <Content Include="Views\Usuario\Denuncia.cshtml" />
     <Content Include="Views\DonacionMonetaria\DonacionMonetaria.cshtml" />
     <Content Include="Views\Shared\_AnonimoLayout.cshtml" />
     <Content Include="Views\Shared\_BaseLayout.cshtml" />
@@ -332,6 +332,10 @@
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DAO\DAO.csproj">
+      <Project>{99f8eb88-bd40-4f85-b365-d889dc99372d}</Project>
+      <Name>DAO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Entidades\Entidades.csproj">
       <Project>{e1fc45c0-c7f1-41fc-887e-bbbe38321f1f}</Project>
       <Name>Entidades</Name>
