--- a/Servicios/Servicios.csproj
+++ b/Servicios/Servicios.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NecesidadValoracionesServicio.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicioDenuncia.cs" />
     <Compile Include="ServicioDonacion.cs" />
