--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -1922,6 +1922,7 @@
     <Content Include="Views\Necesidades\MisNecesidades.cshtml" />
     <Content Include="Views\Usuario\acerca-de.cshtml" />
     <Content Include="Views\Shared\PublicacionDeLaNecesidad.cshtml" />
+    <Content Include="Views\DonacionMonetaria\VerTotalDeDonacion.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
