--- a/WebCovid19/bin/WebCovid19.dll.config
+++ b/WebCovid19/bin/WebCovid19.dll.config
@@ -13,11 +13,13 @@
             name por defecto pone uno muy largo, asi que es mejor ponerle uno mas corto con key adelante-->
     <!--Si queremos agregar mas bases de datos, puedo hacerlo desde aca, agregando otro 
       <add> entre connectionStrings  -->
-  <!--<add name="TpDBContext" connectionString="data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  -->
 	  
-	  <!--Connection de Diana: -->
-	  <add name="TpDBContext" connectionString="data source=DESKTOP-PV19QVA\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	  <!--Connection de Ivan: -->
+	  <!--<add name="TpDBContext" connectionString="data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+	  
+	  <!--Connection de Julieta: -->
+	  	  <add name="TpDBContext" connectionString="data source=LAPTOP-EOVA2UPC\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+
 
   </connectionStrings>
   <appSettings>
