--- a/WebCovid19/Web.config
+++ b/WebCovid19/Web.config
@@ -18,7 +18,7 @@
 	  <!--<add name="TpDBContext" connectionString="data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
 	  
 	  <!--Connection de Julieta: -->
-	  	  <add name="TpDBContext" connectionString="data source=LAPTOP-EOVA2UPC\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	  	  <add name="TpDBContext" connectionString="data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 
 
   </connectionStrings>
