--- a/WebCovid19/Web.config
+++ b/WebCovid19/Web.config
@@ -8,7 +8,21 @@
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <appSettings>
+
+	<connectionStrings>
+		<add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
+
+
+	<!-- ivan conexion
+<connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+-->
+
+	<!-- juli conexion
+<connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-EOVA2UPC\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+-->
+
+<appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
