--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -1914,7 +1914,7 @@
     <Content Include="Views\Necesidades\Monetaria.cshtml" />
     <Content Include="Views\DonacionInsumos\DonacionInsumos.cshtml" />
     <Content Include="Views\DonacionInsumos\GraciasPorDonarInsumos.cshtml" />
-    <Content Include="Views\Usuario\IndexLogueado.cshtml" />
+    <Content Include="Views\Usuario\Home.cshtml" />
     <Content Include="Views\Usuario\Perfil.cshtml" />
     <Content Include="Views\Necesidades\Detalles.cshtml" />
     <Content Include="Views\Usuario\ReenvioDeCodigo.cshtml" />
