--- a/WebCovid19/Web.config
+++ b/WebCovid19/Web.config
@@ -23,9 +23,9 @@
 <connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
 -->
 
-	<!-- juli conexion-->
+	<!-- juli conexion
 <connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-EOVA2UPC\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-</connectionStrings>
+</connectionStrings>-->
 
 
 <appSettings>
