--- a/WebCovid19/Web.config
+++ b/WebCovid19/Web.config
@@ -13,20 +13,20 @@
             name por defecto pone uno muy largo, asi que es mejor ponerle uno mas corto con key adelante-->
     <!--Si queremos agregar mas bases de datos, puedo hacerlo desde aca, agregando otro 
       <add> entre connectionStrings  -->
-<!-- Cande -->
+<!-- Cande 
 	<connectionStrings>
 		<add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
-
+-->
 
 	<!-- ivan conexion
 <connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
 -->
 
-	<!-- juli conexion
+	<!-- juli conexion-->
 <connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-EOVA2UPC\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
--->
+
 
 <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
