Agrego funcionalidad Detalle de la Necesidad
Agrego logica para que al dar Like te mantenga en la misma vista y no se vaya a otra.

--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -111,6 +111,7 @@
     </Compile>
     <Compile Include="ValidationCustom\CheckValidDate.cs" />
     <Compile Include="Views\EncriptarPassword.cs" />
+    <Compile Include="Views\VMComprobantePago.cs" />
     <Compile Include="Views\VMDatosDeVerificacionDeUsuario.cs" />
     <Compile Include="Views\VMDonacionMonetaria.cs" />
     <Compile Include="Views\VMLogin.cs" />
