--- a/WebCovid19/bin/WebCovid19.dll.config
+++ b/WebCovid19/bin/WebCovid19.dll.config
@@ -23,7 +23,7 @@
 <connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
 -->
 	<connectionStrings>
-		<add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TPDD594\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+		<add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=desktop-pv19qva\sqlexpress;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 	</connectionStrings>
 	<!-- juli conexion
 <connectionStrings><add name="EntitiesTP" connectionString="metadata=res://*/ModelTP.csdl|res://*/ModelTP.ssdl|res://*/ModelTP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=LAPTOP-EOVA2UPC\SQLEXPRESS;initial catalog=TP-20201C;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
