--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -1928,6 +1928,7 @@
     <Content Include="Views\Shared\PublicacionInsumos.cshtml" />
     <Content Include="Views\Shared\NecesidadDonacionMonetaria.cshtml" />
     <Content Include="Views\Necesidades\AvisosNecesidad.cshtml" />
+    <Content Include="Views\Necesidades\Referencias.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
