--- a/WebCovid19/WebCovid19.csproj
+++ b/WebCovid19/WebCovid19.csproj
@@ -1935,6 +1935,7 @@
     <Content Include="Views\Necesidades\AvisosNecesidad.cshtml" />
     <Content Include="Views\Necesidades\Referencias.cshtml" />
     <Content Include="Views\Usuario\HistorialDonaciones.cshtml" />
+    <Content Include="Views\DonacionMonetaria\DonaMonetaria.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
